# ChangeLog for dev-python/matplotlib-venn
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  02 Oct 2015; Horea Christian <h.chr@mail.ru> matplotlib-venn-0.11.ebuild:
  fixed license dev-python/matplotlib-venn:

  02 Oct 2015; Horea Christian <h.chr@mail.ru> matplotlib-venn-0.11.ebuild:
  added test use fag dev-python/matplotlib-venn:

  01 Oct 2015; Horea Christian <h.chr@mail.ru> matplotlib-venn-0.11.ebuild:
  added keyword dev-python/matplotlib-venn:

*matplotlib-venn-0.11 (01 Oct 2015)

  01 Oct 2015; Horea Christian <h.chr@mail.ru> +matplotlib-venn-0.11.ebuild,
  +metadata.xml:
  new ebuild dev-python/matplotlib-venn: